--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.7.2
+beautifulsoup4==4.12.2
 certifi==2023.5.7
 cloudinary==1.33.0
 Django==4.2.1
+django-bootstrap-v5==1.0.11
 six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
 urllib3==1.26.16
